--- a/Desktop/test/src/assets/scss/styles.scss
+++ b/Desktop/test/src/assets/scss/styles.scss
@@ -24,3 +24,9 @@ h1,h2,h3,h4,h5,p, ul{
   justify-content: space-between;
   margin-bottom: 20px;
 }
+
+.component-information {
+  &__wrapper {
+    margin-top: 10px;
+  }
+}
